change week1 -> day1, few cleanup code in group1 & 3

--- a/Day1/group1/index.html
+++ b/Day1/group1/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Group 1 Work</title>
 </head>
 <body>
-    <iframe src="file:///C:/Next%20Academy/Frontend%20Web%20Dev/Week1/index.html" height="200" width="300"></iframe>
-    <br/>
-    <q>q: for quoting a sentence</q>
+    <p><a href ="https://code.nextacademy.com/lessons/group-activity/890" target="_blank">Click here</a> and scroll to 'Group1' to see project details</p>
+    <iframe src="file:///C:/Next%20Academy/Frontend%20Web%20Dev/Day1/index.html" height="200" width="300"></iframe><br/>
+    <q id="border-application">q: for quoting a sentence</q>
     <blockquote site="http://www.google.com">
         blockquote : gave that extra indent. is the place where we able to put huge quote from other source.
         it will set in the block view. and the 'site' part is useful for the search engine part for tagging purposes
