--- a/Day1/group3/index.html
+++ b/Day1/group3/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tab here</title>
+    <title>Group 3 Work</title>
     <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
+    <p><a href ="https://code.nextacademy.com/lessons/group-activity/890" target="_blank">Click here</a> and scroll to 'Group3' to see project details</p>
     <h1>HTML section</h1>
     <strong>strong : bold me</strong><br/>
     <em>em : italic me</em><br/>
