--- a/Day1/group2/index.html
+++ b/Day1/group2/index.html
@@ -30,7 +30,7 @@
         <label for="male">Male</label>
         <input type="radio" name="gender" id="male" value="male"><br>
 
-        <input for="female">Female</label>
+        <label for="female">Female</label>
         <input type="radio" name="gender" id="female" value="female"><br>
         
         <label for="other">Other</label>
