combine html + css in day1-group3

--- a/Day1/group3/index.html
+++ b/Day1/group3/index.html
@@ -5,7 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Group 3 Work</title>
-    <link rel="stylesheet" href="./style.css"/>
+    <style>
+        h2 {
+            border : 1px solid black ;
+            margin: 1000px;
+            margin-top: 40px;
+            margin-bottom: 60px;
+            margin-right: 80px;
+            margin-left: 100px;
+
+        }
+
+        h3 {
+            border : 1px solid blue;
+            padding: 1000px;
+            padding-top: 80px;
+            padding-bottom: 60px;
+            padding-left: 40px;
+            padding-right: 20px;
+        }
+
+        h1 {
+            color: #000000;
+            border: 5px solid black;
+        }
+
+        :not(h1) {
+            color:darkblue;
+        }
+
+        div {
+            border:1px solid darkblue;
+            margin-top:300px;
+        }
+    </style>
+
+<!-- ------------------------------------------------------------------------------- -->
+
 </head>
 <body>
     <p><a href ="https://code.nextacademy.com/lessons/group-activity/890" target="_blank">Click here</a> and scroll to 'Group3' to see project details</p>
