tidy up to day3 + main index.html for GoLive

--- a/Day2/goshoe-boyke/goshoe-boyke.html
+++ b/Day2/goshoe-boyke/goshoe-boyke.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="chal.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="goshoe-boyke-style.css" media="screen"/>
 </head>
 <body>
     <div class="head">
