update index.html for go live

--- a/index.html
+++ b/index.html
@@ -166,5 +166,18 @@
         <li><a href="./Day1/group5/index.html"> Group 5 Tasks </a></li>
       </ul>
     </div>
+    <div>
+      <h3>Day10 Bonus - vanillaJS to Jquery converter</h3>
+      <ul>
+        <li>
+          <a href="./Day1/index.html"> Introduction of HTML & CSS </a>
+        </li>
+        <li><a href="./Day1/group1/index.html"> Group 1 Tasks </a></li>
+        <li><a href="./Day1/group2/index.html"> Group 2 Tasks </a></li>
+        <li><a href="./Day1/group3/index.html"> Group 3 Tasks </a></li>
+        <li><a href="./Day1/group4/index.html"> Group 4 Tasks </a></li>
+        <li><a href="./Day1/group5/index.html"> Group 5 Tasks </a></li>
+      </ul>
+    </div>
   </body>
 </html>
